# readme_renderer

./: .envrc  .gitignore  README.rst  flake.nix  pyproject.toml  tox.ini
readme_renderer/: __main__.py  clean.py  markdown.py  math_parser.py  rst.py  txt.py
readme_renderer/bundle/: README.md  katex.min.js
tests/fixtures/: test_rst_math.html
