[tool.setuptools.packages.find]
where = ["readme_renderer"]
exclude = ["tests", "tests.*"]

[tool.pyright]
include = ["readme_renderer"]
reportMissingImports = true
reportMissingTypeStubs = false
defineConstant = { DEBUG = true }
pythonVersion = "3.11"
pythonPlatform = "Linux"
executionEnvironments = [{root="py"}]

[tool.poetry]
name = "readme_renderer"
packages = [{include="*",from="readme_renderer"}]
version = "1.0.0"
description = "This is readme_renderer"
authors = ["Juan Rios <jrios@tuta.io>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.11"
nh3 = ">=0.2.14"
docutils = ">=0.13.1"
Pygments = ">=2.5.1"
stpyv8 = "~12.1.285.28"
cmarkgfm = ">=0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
